@@ -1,5 +1,15 @@
 2014-01-17  Anders Carlsson  <andersca@apple.com>
 
+        Try to fix the Windows build.
+
+        * API/OpaqueJSString.cpp:
+        (OpaqueJSString::~OpaqueJSString):
+        (OpaqueJSString::characters):
+        * API/OpaqueJSString.h:
+        (OpaqueJSString::OpaqueJSString):
+
+2014-01-17  Anders Carlsson  <andersca@apple.com>
+
         Get rid of OpaqueJSString::deprecatedCharacters()
         https://bugs.webkit.org/show_bug.cgi?id=127161
 
